--- a/tf_keras _시퀀스와 함수 API로 모델 만들어보기 .ipynb
+++ b/tf_keras _시퀀스와 함수 API로 모델 만들어보기 .ipynb
@@ -28,6 +28,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2.3.1'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "keras.__version__"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -161,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +216,7 @@
        "<module 'scipy.sparse' from '/Users/dahlmoon/anaconda3/lib/python3.7/site-packages/scipy/sparse/__init__.py'>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,17 +251,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<keras.layers.core.Dense at 0x63a8d2410>,\n",
-       " <keras.layers.core.Dense at 0x63a7787d0>]"
+       "[<keras.layers.core.Dense at 0x1473bccd0>,\n",
+       " <keras.layers.core.Dense at 0x1473b6910>]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -280,6 +300,142 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<keras.layers.core.Dense at 0x1473bccd0>,\n",
+       " <keras.layers.core.Dense at 0x1473b6910>]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.layers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__call__',\n",
+       " '__class__',\n",
+       " '__delattr__',\n",
+       " '__dict__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__le__',\n",
+       " '__lt__',\n",
+       " '__module__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " '__weakref__',\n",
+       " '_add_inbound_node',\n",
+       " '_built',\n",
+       " '_get_existing_metric',\n",
+       " '_get_node_attribute_at_index',\n",
+       " '_inbound_nodes',\n",
+       " '_initial_weights',\n",
+       " '_losses',\n",
+       " '_metrics',\n",
+       " '_node_key',\n",
+       " '_non_trainable_weights',\n",
+       " '_outbound_nodes',\n",
+       " '_per_input_losses',\n",
+       " '_per_input_updates',\n",
+       " '_trainable_weights',\n",
+       " '_updates',\n",
+       " 'activation',\n",
+       " 'activity_regularizer',\n",
+       " 'add_loss',\n",
+       " 'add_metric',\n",
+       " 'add_update',\n",
+       " 'add_weight',\n",
+       " 'assert_input_compatibility',\n",
+       " 'batch_input_shape',\n",
+       " 'bias',\n",
+       " 'bias_constraint',\n",
+       " 'bias_initializer',\n",
+       " 'bias_regularizer',\n",
+       " 'build',\n",
+       " 'built',\n",
+       " 'call',\n",
+       " 'compute_mask',\n",
+       " 'compute_output_shape',\n",
+       " 'count_params',\n",
+       " 'dtype',\n",
+       " 'from_config',\n",
+       " 'get_config',\n",
+       " 'get_input_at',\n",
+       " 'get_input_mask_at',\n",
+       " 'get_input_shape_at',\n",
+       " 'get_losses_for',\n",
+       " 'get_output_at',\n",
+       " 'get_output_mask_at',\n",
+       " 'get_output_shape_at',\n",
+       " 'get_updates_for',\n",
+       " 'get_weights',\n",
+       " 'input',\n",
+       " 'input_mask',\n",
+       " 'input_shape',\n",
+       " 'input_spec',\n",
+       " 'kernel',\n",
+       " 'kernel_constraint',\n",
+       " 'kernel_initializer',\n",
+       " 'kernel_regularizer',\n",
+       " 'losses',\n",
+       " 'metrics',\n",
+       " 'name',\n",
+       " 'non_trainable_weights',\n",
+       " 'output',\n",
+       " 'output_mask',\n",
+       " 'output_shape',\n",
+       " 'set_weights',\n",
+       " 'stateful',\n",
+       " 'supports_masking',\n",
+       " 'trainable',\n",
+       " 'trainable_weights',\n",
+       " 'units',\n",
+       " 'updates',\n",
+       " 'use_bias',\n",
+       " 'weights']"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(model.layers[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -294,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,17 +461,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<keras.layers.core.Dense at 0x63c4d2350>,\n",
-       " <keras.layers.core.Dense at 0x63c4d2590>]"
+       "[<keras.layers.core.Dense at 0x147422610>,\n",
+       " <keras.layers.core.Dense at 0x147418690>]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,20 +482,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_3\"\n",
+      "Model: \"sequential_2\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "dense_6 (Dense)              (None, 2)                 4         \n",
+      "dense_3 (Dense)              (None, 2)                 4         \n",
       "_________________________________________________________________\n",
-      "dense_7 (Dense)              (None, 1)                 3         \n",
+      "dense_4 (Dense)              (None, 1)                 3         \n",
       "=================================================================\n",
       "Total params: 7\n",
       "Trainable params: 7\n",
@@ -354,17 +510,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<tf.Variable 'dense_6/kernel:0' shape=(1, 2) dtype=float32, numpy=array([[0.7991065 , 0.05547094]], dtype=float32)>,\n",
-       " <tf.Variable 'dense_6/bias:0' shape=(2,) dtype=float32, numpy=array([0., 0.], dtype=float32)>]"
+       "[<tf.Variable 'dense_3/kernel:0' shape=(1, 2) dtype=float32, numpy=array([[-0.80274874,  0.9691192 ]], dtype=float32)>,\n",
+       " <tf.Variable 'dense_3/bias:0' shape=(2,) dtype=float32, numpy=array([0., 0.], dtype=float32)>]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,19 +531,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<tf.Variable 'dense_7/kernel:0' shape=(2, 1) dtype=float32, numpy=\n",
-       " array([[ 0.85462487],\n",
-       "        [-0.55090886]], dtype=float32)>,\n",
-       " <tf.Variable 'dense_7/bias:0' shape=(1,) dtype=float32, numpy=array([0.], dtype=float32)>]"
+       "[<tf.Variable 'dense_4/kernel:0' shape=(2, 1) dtype=float32, numpy=\n",
+       " array([[0.09991705],\n",
+       "        [0.21944714]], dtype=float32)>,\n",
+       " <tf.Variable 'dense_4/bias:0' shape=(1,) dtype=float32, numpy=array([0.], dtype=float32)>]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +678,7 @@
        "4"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,17 +689,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<tf.Variable 'dense_3/kernel:0' shape=(1, 2) dtype=float32, numpy=array([[ 0.7727703, -1.0448133]], dtype=float32)>,\n",
+       "[<tf.Variable 'dense_3/kernel:0' shape=(1, 2) dtype=float32, numpy=array([[-0.80274874,  0.9691192 ]], dtype=float32)>,\n",
        " <tf.Variable 'dense_3/bias:0' shape=(2,) dtype=float32, numpy=array([0., 0.], dtype=float32)>]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,16 +710,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tf.Variable 'dense_3/kernel:0' shape=(1, 2) dtype=float32, numpy=array([[ 0.7727703, -1.0448133]], dtype=float32)>"
+       "<tf.Variable 'dense_3/kernel:0' shape=(1, 2) dtype=float32, numpy=array([[-0.80274874,  0.9691192 ]], dtype=float32)>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +739,7 @@
        "<tf.Variable 'dense_3/bias:0' shape=(2,) dtype=float32, numpy=array([0., 0.], dtype=float32)>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,19 +750,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[<tf.Variable 'dense_4/kernel:0' shape=(2, 1) dtype=float32, numpy=\n",
-       " array([[ 0.41151166],\n",
-       "        [-0.8953926 ]], dtype=float32)>,\n",
+       " array([[0.09991705],\n",
+       "        [0.21944714]], dtype=float32)>,\n",
        " <tf.Variable 'dense_4/bias:0' shape=(1,) dtype=float32, numpy=array([0.], dtype=float32)>]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,6 +770,13 @@
    "source": [
     "model_.layers[1].weights"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
