--- a/tf_kera_클래스로 모델을 정의하기 .ipynb
+++ b/tf_kera_클래스로 모델을 정의하기 .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2.2.0'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,16 +57,343 @@
     "        x = self.flatten(x)\n",
     "        x = self.fc_2(self.fc_1(x))\n",
     "        return self.out(x)\n",
-    "    \n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "lenet = LeNet()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['_TF_MODULE_IGNORED_PROPERTIES',\n",
+       " '__call__',\n",
+       " '__class__',\n",
+       " '__delattr__',\n",
+       " '__dict__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__getstate__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__le__',\n",
+       " '__lt__',\n",
+       " '__module__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__setattr__',\n",
+       " '__setstate__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " '__weakref__',\n",
+       " '_activity_regularizer',\n",
+       " '_add_inbound_node',\n",
+       " '_add_trackable',\n",
+       " '_add_variable_with_custom_getter',\n",
+       " '_assert_compile_was_called',\n",
+       " '_assert_weights_created',\n",
+       " '_attribute_sentinel',\n",
+       " '_auto_track_sub_layers',\n",
+       " '_autocast',\n",
+       " '_base_init',\n",
+       " '_build_input_shape',\n",
+       " '_call_accepts_kwargs',\n",
+       " '_call_arg_was_passed',\n",
+       " '_call_fn_args',\n",
+       " '_call_full_argspec',\n",
+       " '_callable_losses',\n",
+       " '_check_call_args',\n",
+       " '_checkpoint_dependencies',\n",
+       " '_clear_losses',\n",
+       " '_collect_input_masks',\n",
+       " '_compile_was_called',\n",
+       " '_compiled_trainable_state',\n",
+       " '_compute_dtype',\n",
+       " '_compute_output_and_mask_jointly',\n",
+       " '_compute_tensor_usage_count',\n",
+       " '_conform_to_reference_input',\n",
+       " '_dedup_weights',\n",
+       " '_deferred_dependencies',\n",
+       " '_distribution_strategy',\n",
+       " '_dtype',\n",
+       " '_dtype_defaulted_to_floatx',\n",
+       " '_dtype_policy',\n",
+       " '_dynamic',\n",
+       " '_eager_add_metric',\n",
+       " '_eager_losses',\n",
+       " '_expects_mask_arg',\n",
+       " '_expects_training_arg',\n",
+       " '_flatten',\n",
+       " '_flatten_to_reference_inputs',\n",
+       " '_gather_children_attribute',\n",
+       " '_gather_layers',\n",
+       " '_gather_saveables_for_checkpoint',\n",
+       " '_gather_unique_layers',\n",
+       " '_get_call_arg_value',\n",
+       " '_get_callback_model',\n",
+       " '_get_compile_args',\n",
+       " '_get_distribution_strategy',\n",
+       " '_get_existing_metric',\n",
+       " '_get_node_attribute_at_index',\n",
+       " '_get_optimizer',\n",
+       " '_get_save_spec',\n",
+       " '_get_trainable_state',\n",
+       " '_graph',\n",
+       " '_graph_network_add_loss',\n",
+       " '_graph_network_add_metric',\n",
+       " '_handle_activity_regularization',\n",
+       " '_handle_deferred_dependencies',\n",
+       " '_handle_deferred_layer_dependencies',\n",
+       " '_handle_weight_regularization',\n",
+       " '_in_multi_worker_mode',\n",
+       " '_inbound_nodes',\n",
+       " '_init_call_fn_args',\n",
+       " '_init_graph_network',\n",
+       " '_init_set_name',\n",
+       " '_init_subclassed_network',\n",
+       " '_initial_weights',\n",
+       " '_input_spec',\n",
+       " '_insert_layers',\n",
+       " '_is_compiled',\n",
+       " '_is_graph_network',\n",
+       " '_is_layer',\n",
+       " '_keras_api_names',\n",
+       " '_keras_api_names_v1',\n",
+       " '_layer_checkpoint_dependencies',\n",
+       " '_layers',\n",
+       " '_list_extra_dependencies_for_serialization',\n",
+       " '_list_functions_for_serialization',\n",
+       " '_lookup_dependency',\n",
+       " '_losses',\n",
+       " '_maybe_build',\n",
+       " '_maybe_cast_inputs',\n",
+       " '_maybe_create_attribute',\n",
+       " '_maybe_initialize_trackable',\n",
+       " '_maybe_load_initial_epoch_from_ckpt',\n",
+       " '_metrics',\n",
+       " '_metrics_lock',\n",
+       " '_name',\n",
+       " '_name_based_attribute_restore',\n",
+       " '_name_based_restores',\n",
+       " '_name_scope',\n",
+       " '_no_dependency',\n",
+       " '_non_trainable_weights',\n",
+       " '_obj_reference_counts',\n",
+       " '_obj_reference_counts_dict',\n",
+       " '_object_identifier',\n",
+       " '_outbound_nodes',\n",
+       " '_preload_simple_restoration',\n",
+       " '_reset_compile_cache',\n",
+       " '_restore_from_checkpoint_position',\n",
+       " '_reuse',\n",
+       " '_run_eagerly',\n",
+       " '_run_internal_graph',\n",
+       " '_saved_model_inputs_spec',\n",
+       " '_scope',\n",
+       " '_self_name_based_restores',\n",
+       " '_self_setattr_tracking',\n",
+       " '_self_unconditional_checkpoint_dependencies',\n",
+       " '_self_unconditional_deferred_dependencies',\n",
+       " '_self_unconditional_dependency_names',\n",
+       " '_self_update_uid',\n",
+       " '_set_connectivity_metadata_',\n",
+       " '_set_dtype_policy',\n",
+       " '_set_inputs',\n",
+       " '_set_mask_metadata',\n",
+       " '_set_output_names',\n",
+       " '_set_save_spec',\n",
+       " '_set_trainable_state',\n",
+       " '_setattr_tracking',\n",
+       " '_should_compute_mask',\n",
+       " '_should_eval',\n",
+       " '_single_restoration_from_checkpoint_position',\n",
+       " '_stateful',\n",
+       " '_supports_ragged_inputs',\n",
+       " '_symbolic_add_metric',\n",
+       " '_symbolic_call',\n",
+       " '_tf_api_names',\n",
+       " '_tf_api_names_v1',\n",
+       " '_thread_local',\n",
+       " '_track_trackable',\n",
+       " '_trackable_saved_model_saver',\n",
+       " '_trackable_saver',\n",
+       " '_tracking_metadata',\n",
+       " '_trainable',\n",
+       " '_trainable_weights',\n",
+       " '_training_state',\n",
+       " '_unconditional_checkpoint_dependencies',\n",
+       " '_unconditional_dependency_names',\n",
+       " '_undeduplicated_weights',\n",
+       " '_update_uid',\n",
+       " '_updated_config',\n",
+       " '_updates',\n",
+       " '_validate_compile',\n",
+       " '_validate_graph_inputs_and_outputs',\n",
+       " '_warn_about_input_casting',\n",
+       " 'activity_regularizer',\n",
+       " 'add_loss',\n",
+       " 'add_metric',\n",
+       " 'add_update',\n",
+       " 'add_variable',\n",
+       " 'add_weight',\n",
+       " 'apply',\n",
+       " 'average_pool',\n",
+       " 'build',\n",
+       " 'built',\n",
+       " 'call',\n",
+       " 'compile',\n",
+       " 'compiled_loss',\n",
+       " 'compiled_metrics',\n",
+       " 'compute_mask',\n",
+       " 'compute_output_shape',\n",
+       " 'compute_output_signature',\n",
+       " 'conv2d_1',\n",
+       " 'conv2d_2',\n",
+       " 'count_params',\n",
+       " 'distribute_strategy',\n",
+       " 'dtype',\n",
+       " 'dynamic',\n",
+       " 'evaluate',\n",
+       " 'evaluate_generator',\n",
+       " 'fc_1',\n",
+       " 'fc_2',\n",
+       " 'fit',\n",
+       " 'fit_generator',\n",
+       " 'flatten',\n",
+       " 'from_config',\n",
+       " 'get_config',\n",
+       " 'get_input_at',\n",
+       " 'get_input_mask_at',\n",
+       " 'get_input_shape_at',\n",
+       " 'get_layer',\n",
+       " 'get_losses_for',\n",
+       " 'get_output_at',\n",
+       " 'get_output_mask_at',\n",
+       " 'get_output_shape_at',\n",
+       " 'get_updates_for',\n",
+       " 'get_weights',\n",
+       " 'history',\n",
+       " 'inbound_nodes',\n",
+       " 'input',\n",
+       " 'input_mask',\n",
+       " 'input_names',\n",
+       " 'input_shape',\n",
+       " 'input_spec',\n",
+       " 'inputs',\n",
+       " 'layers',\n",
+       " 'load_weights',\n",
+       " 'losses',\n",
+       " 'make_predict_function',\n",
+       " 'make_test_function',\n",
+       " 'make_train_function',\n",
+       " 'metrics',\n",
+       " 'metrics_names',\n",
+       " 'name',\n",
+       " 'name_scope',\n",
+       " 'non_trainable_variables',\n",
+       " 'non_trainable_weights',\n",
+       " 'optimizer',\n",
+       " 'out',\n",
+       " 'outbound_nodes',\n",
+       " 'output',\n",
+       " 'output_mask',\n",
+       " 'output_names',\n",
+       " 'output_shape',\n",
+       " 'outputs',\n",
+       " 'predict',\n",
+       " 'predict_function',\n",
+       " 'predict_generator',\n",
+       " 'predict_on_batch',\n",
+       " 'predict_step',\n",
+       " 'reset_metrics',\n",
+       " 'reset_states',\n",
+       " 'run_eagerly',\n",
+       " 'save',\n",
+       " 'save_weights',\n",
+       " 'set_weights',\n",
+       " 'state_updates',\n",
+       " 'stateful',\n",
+       " 'stop_training',\n",
+       " 'submodules',\n",
+       " 'summary',\n",
+       " 'supports_masking',\n",
+       " 'test_function',\n",
+       " 'test_on_batch',\n",
+       " 'test_step',\n",
+       " 'to_json',\n",
+       " 'to_yaml',\n",
+       " 'train_function',\n",
+       " 'train_on_batch',\n",
+       " 'train_step',\n",
+       " 'trainable',\n",
+       " 'trainable_variables',\n",
+       " 'trainable_weights',\n",
+       " 'updates',\n",
+       " 'variables',\n",
+       " 'weights',\n",
+       " 'with_name_scope']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(lenet)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lenet.compile()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "This model has not yet been built. Build the model first by calling `build()` or calling `fit()` with some data, or specify an `input_shape` argument in the first layer(s) for automatic build.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-12-bf39cae9eafb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlenet\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msummary\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/tensorflow/python/keras/engine/network.py\u001b[0m in \u001b[0;36msummary\u001b[0;34m(self, line_length, positions, print_fn)\u001b[0m\n\u001b[1;32m   1344\u001b[0m     \"\"\"\n\u001b[1;32m   1345\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbuilt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1346\u001b[0;31m       raise ValueError('This model has not yet been built. '\n\u001b[0m\u001b[1;32m   1347\u001b[0m                        \u001b[0;34m'Build the model first by calling `build()` or calling '\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1348\u001b[0m                        \u001b[0;34m'`fit()` with some data, or specify '\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: This model has not yet been built. Build the model first by calling `build()` or calling `fit()` with some data, or specify an `input_shape` argument in the first layer(s) for automatic build."
+     ]
+    }
+   ],
+   "source": [
+    "lenet.summary()"
+   ]
   },
   {
    "cell_type": "code",
@@ -58,9 +405,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tensorcpu",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "tensorcpu"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
